Corrected visible-print behavior when not in print mode

--- a/tp/wwwstatic/less/appName/print.less
+++ b/tp/wwwstatic/less/appName/print.less
@@ -1,6 +1,8 @@
 // Print Styles
 // -------------
 
+.visible-print { display: none !important; }
+
 @media print {
   //* { background: transparent !important; }
   * { color: black !important; box-shadow:none !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } // Black prints faster: h5bp.com/s
